# MDSpaceFillingPrototype

./: .gitignore  .travis.yml  .travis_script.sh  CMakeLists.txt  Merge.h  README.md  conan_setup.sh  conanfile.txt  generate_bit_interleaving_test.py  get_geometry.py  mantid_benchmark.py  plot_dataset.py
.travis/: Dockerfile  script.sh
CMake/: FindGBenchmark.cmake  OpenMP.cmake  targets.cmake
docs/: MDSpaceDesign.md  bit_interleaving.md  bit_padding_generator.py  box_structure.md  coordinate_conversion.md  event_access.md  notes_from_2018-04-23.txt  overview.md  plot_benchmark_results.py  q_conversion.md  sort_algorithm_benchmarking.md
docs/event_access/: plot_results.py
docs/merging/: plot_results.py  readme.md
docs/q_conversion/: plot_results.py  readme.md
scripts/: generate_morton_mask.py  get_geometry.py  mantid_benchmark_binmd.py  mantid_benchmark_common.py  mantid_benchmark_converttomd.py  mantid_benchmark_mergemd.py
src/: BitInterleaving.h  BitInterleaving128bit.h  BitInterleavingBoostGMP.h  BitInterleavingEigen.h  BitInterleavingNaive.h  CMakeLists.txt  Constants.cpp  Constants.h  CoordinateConversion.h  DistributionGenerator.h  Event.h  EventNexusLoader.cpp  EventNexusLoader.h  EventToMDEventConversion.cpp  EventToMDEventConversion.h  Instrument.cpp  Instrument.h  IsisEventNexusLoader.cpp  IsisEventNexusLoader.h  MDBox.h  MDEvent.h  MantidEventNexusLoader.cpp  MantidEventNexusLoader.h  Merge.h  NexusLoaderUtils.h  Rebin.h  TofEvent.h  Types.h
src/benchmark/: BitInterleaving128bitBenchmark.cpp  BitInterleaving256bitBenchmark.cpp  BitInterleaving64bitBenchmark.cpp  BitInterleaving64bitBoostGMPBenchmark.cpp  BitInterleavingBenchmark.cpp  CMakeLists.txt  CoordinateConversionBenchmark.cpp  DummyBenchmark.cpp  EventAccessBenchmark.cpp  EventCreationBenchmark.cpp  MDBoxBenchmark.cpp  MergeBenchmark.cpp  QConversionBenchmark.cpp  SortBenchmark.cpp  SortBenchmarkCommon.h  SortBenchmarkLarge.cpp  SortDatasetBenchmark.cpp  SortEventBenchmark.cpp  scoped_wallclock_timer.hpp
src/exe/: ArgumentsParsing.cpp  ArgumentsParsing.h  CMakeLists.txt  DatasetGenerator.cpp  LoadInstrumentDemo.cpp  MergeDemo.cpp  NexusParserDemo.cpp  QConversionDemo.cpp  scoped_wallclock_timer.cpp  scoped_wallclock_timer.h
src/test/: AppendEventsTest.cpp  BitInterleaving128BitTest.cpp  BitInterleaving256BitTest.cpp  BitInterleavingBoostGMPTest.cpp  (+22 more)
(+4 files in other folders)
